syntax = "proto3";
package v1.models;

message Identity {
  string id = 1;
  int64 created_at = 2;
  int64 updated_at = 3;

  optional string username = 4;
  optional string primary_email = 5;
  map<string, IdentityAccount> linked_accounts = 6;
  map<string, IdentityEmail> emails = 7;
}

message IdentityEmail { optional int64 verified_at = 2; }
message IdentityAccount { string provider_id = 1; }

message Session {
  string id = 1;
  string identity_id = 2;
  string current_refresh_token = 3;
  int64 created_at = 4;
  int64 updated_at = 5;
  optional int64 revoked_at = 6;
  optional bytes ip = 7;
}

message RefreshToken {
  string id = 1;
  optional string next = 2;
  optional string prev = 3;
  int64 expires_at = 4;
  int64 created_at = 5;
  optional int64 revoked_at = 6;
  string session_id = 7;
  string identity_id = 8;
  string access_token_id = 9;
}

message Process {
  string id = 1;
  optional int64 completed_at = 2;
  int64 expires_at = 3;
  int64 created_at = 4;

  oneof data {
    UsernameEmailLoginProcess username_email_login = 5;
    UsernameEmailSignupProcess username_email_signup = 6;
    VerificationProcess verification = 7;
    RecoveryProcess recovery = 8;
  }
}

enum ProcessType {
  USERNAME_EMAIL_LOGIN = 0;
  USERNAME_EMAIL_SIGNUP = 1;
  VERIFICATION = 2;
  RECOVERY = 3;
}

message UsernameEmailLoginProcess {
  string identity_id = 1;
  string device_id = 2;
  Step current_step = 3;

  enum Step {
    WAIT = 0;
    USERNAME = 1;
    EMAIL = 2;
    SECOND_FACTOR = 3;
    PASSWORD = 4;
  }
}

message UsernameEmailSignupProcess {
  string device_id = 1;
  optional string email = 2;
  optional string username = 3;
  Step current_step = 4;

  enum Step {
    WAIT = 0;
    USERNAME = 1;
    EMAIL = 2;
    PASSWORD = 3;
  }
}

message StepType {
  oneof type {
    UsernameEmailSignupProcess.Step username_email_signup = 1;
    UsernameEmailLoginProcess.Step username_email_login = 2;
  }
}

message VerificationProcess { string identity_id = 1; }
message RecoveryProcess { string identity_id = 1; }
